--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/markdown-it": "^14.1.2",
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
